# OpenglAndRtmp

./: settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/stormdzh/openglandrtmp/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: RecordBuffer.cpp  RecordBuffer.h  RtmpPush.cpp  RtmpPush.h  native-lib.cpp
app/src/main/java/com/stormdzh/openglandrtmp/: CameraActivity.java  EglHelper.java  EglSurfaceActivity.java  FboRender.java  ImageVideoActivity.java  MainActivity.java  VideoActivity.java  WLEGLSurfaceView.java  WLMutiSuffaceView.java  WlGlSurfaceView.java  WlMutiRender.java  WlRender.java  WlShaderUtil.java  WlTextureRender.java  YuvActivity.java
app/src/main/java/com/stormdzh/openglandrtmp/camera/: CameraActivity.java  NativeSdk.java
app/src/main/java/com/stormdzh/openglandrtmp/encodec/: WlBaseMediaEncoder.java  WlEncodecRender.java  WlMediaEncodec.java
app/src/main/java/com/stormdzh/openglandrtmp/imgvideo/: WlImgFboRender.java  WlImgVideoRender.java  WlImgVideoView.java
app/src/main/java/com/stormdzh/openglandrtmp/rtmppush/: LivePushActivity.java  OnRtmpLisetner.java  WlBasePushEncoder.java  WlEncodecPushRender.java  WlPushEncodec.java
app/src/main/res/layout/: activity_camera.xml  activity_egl.xml  activity_imagevideo.xml  activity_livepush.xml  activity_main.xml  activity_test_audiorecord.xml  activity_testsles_record.xml  activity_video.xml  activity_yuv.xml
app/src/main/res/values/: strings.xml  styles.xml
app/src/test/java/com/stormdzh/openglandrtmp/: ExampleUnitTest.java
(+15 files in other folders)
